nest the resource datum into chart

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -11,7 +11,7 @@
     <%# <%= f.input(:title, prompt: true) %1><br> %>
     <%= f.input(:type, collection: [['PNG', :png], ['SVG', :svg]], prompt: true) %><br>
     <%= f.input(:width, prompt: true) %><br>
-    <%= f.input(:data, prompt: true) %><br>
+    <%= f.input(:value, prompt: true) %><br>
     <%= f.input(:style, collection: [
         ['Circle', :circle], 
         ['Cross', :cross], 
