--- a/app/views/charts/new.html.erb
+++ b/app/views/charts/new.html.erb
@@ -1,4 +1,12 @@
 <%= simple_form_for(@chart) do |f| %>
+     <%= f.simple_fields_for :datum do |p| %>
+        <%= p.input :value %>
+        <%= p.input :label %>
+        <%= p.input :color %>
+      <% end %>
+      </br>
+      </br>
+      </br>
     <%= f.input(:background_color, collection: [['White', :white], ['Red', :red], ['Pink', :pink]]) %><br>
     <%# <%= f.input(:colors, prompt: true) %1><br> %>
     <%= f.input(:columns, collection: (1..100), prompt: true) %><br>
@@ -11,7 +19,6 @@
     <%# <%= f.input(:title, prompt: true) %1><br> %>
     <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]], prompt: true) %><br>
     <%= f.input(:width, prompt: true) %><br>
-    <%# <%= f.input(:data, prompt: true) %1><br> %>
     <%= f.input(:style, collection: [
         ['Circle', :circle], 
         ['Cross', :cross], 
