increase number of fields dynamically

--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -1,24 +1,20 @@
 <%= simple_form_for(@chart) do |f| %>
-    <%= f.simple_fields_for :data do |p| %>
-        <div class="well" >
-            <%= p.input :value %>
-            <%= p.input :label %>
-            <%= p.input :color %>
-        </div>
+    <%= f.simple_fields_for :data do |datum| %>
+        <%= render 'datum_fields', f: datum %>
     <% end %>
+    <div class="links">
+        <span class="btn btn-default"><%= link_to_add_association 'add task', f, :data %></span>
+    </div>
     </br>
     </br>
     </br>
     <%= f.input(:background_color, collection: [['White', :white], ['Red', :red], ['Pink', :pink]]) %><br>
-    <%# <%= f.input(:colors, prompt: true) %1><br> %>
     <%= f.input(:columns, collection: (1..100), prompt: true) %><br>
-    <%# <%= f.input(:filename, prompt: true) %1><br> %>
-    <%# <%= f.input(:grouplabels, prompt: true) %1><br> %>
-    <%# <%= f.input(:height, prompt: true) %1><br> %>
+    <%= f.input(:grouplabels, prompt: true) %><br>
+    <%= f.input(:height, prompt: true) %><br>
     <%= f.input(:item_height, prompt: true) %><br>
     <%= f.input(:item_width, prompt: true) %><br>
-    <%# <%= f.input(:labels, prompt: true) %1><br> %>
-    <%# <%= f.input(:title, prompt: true) %1><br> %>
+    <%= f.input(:title, prompt: true) %><br>
     <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]], prompt: true) %><br>
     <%= f.input(:width, prompt: true) %><br>
     <%= f.input(:style, collection: [
