--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -5,7 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Title</th>
+      <th>Show</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
