beautifies charts form

--- a/app/views/charts/_datum_fields.html.erb
+++ b/app/views/charts/_datum_fields.html.erb
@@ -2,5 +2,5 @@
     <%= f.input :value %>
     <%= f.input :label %>
     <%= f.input :color %>
-    <%= link_to_remove_association "Remove datum", f %>
+    <%= link_to_remove_association "Remove datum", f, class: "btn btn-danger btn-small" %>
 </div>
