--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -7,18 +7,20 @@
         <% end %>
         <div class="links">
             <%= link_to_add_association 'Add Data', f, :data, class: "btn btn-default" %>
+            <%= f.submit class: 'btn btn-primary' %>
         </div>
     </div>
     <div class="col-lg-6 well">
-        <%= f.input(:title) %><br>
-        <%= f.input(:background_color, collection: [['White', :white], ['Red', :red], ['Pink', :pink]]) %><br>
-        <%= f.input(:columns, collection: (1..100), prompt: true) %><br>
-        <%= f.input(:grouplabels) %><br>
-        <%= f.input(:item_height) %><br>
-        <%= f.input(:item_width) %><br>
-        <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]], prompt: true) %><br>
-        <%= f.input(:width) %><br>
-        <%= f.input(:height) %><br>
+        <img src="<%= chart_path(@chart) %>" style="width: 100%;">
+        <%= f.input(:title) %>
+        <%= f.input(:background_color, collection: [['White', :white], ['Red', :red], ['Pink', :pink]]) %>
+        <%= f.input(:columns, collection: (1..100), prompt: true) %>
+        <%= f.input(:grouplabels) %>
+        <%= f.input(:item_height) %>
+        <%= f.input(:item_width) %>
+        <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]], prompt: true) %>
+        <%= f.input(:width) %>
+        <%= f.input(:height) %>
         <%= f.input(:style, collection: [
             ['Circle', :circle],
             ['Cross', :cross],
@@ -26,8 +28,8 @@
             ['Bar', :bar],
             ['Pie', :pie]
         ],
-        prompt: true) %><br>
-        <%= f.submit "Submit", class: 'btn btn-primary' %>
+        prompt: true) %>
+        <%= f.submit class: 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
