Create a table like layout for charts data

--- a/app/views/charts/_datum_fields.html.erb
+++ b/app/views/charts/_datum_fields.html.erb
@@ -1,15 +1,14 @@
-<div class="well nested-fields">
-    <%= f.input :value %>
-    <%= f.input :label %>
-    <%= f.input :color,
-                as: :minicolors,
-                input_html: {
-                  data: {
-                    minicolors: {
-                      theme:    :bootstrap,
-                      position: :right
-                    }
-                  }
-                } %>
-    <%= link_to_remove_association "Remove datum", f, class: "btn btn-danger btn-small" %>
-</div>
+<tr class="nested-fields data-fields">
+  <td>
+    <%= f.input :value, label: false %>
+  </td>
+  <td>
+    <%= f.input :label, label: false %>
+  </td>
+  <td>
+    <%= f.input :color, label: false, input_html: { class: :minicolors } %>
+  </td>
+  <td>
+    <%= link_to_remove_association "Remove", f, class: "btn btn-danger" %>
+  </td>
+</tr>
