--- a/app/assets/stylesheets/charts.scss
+++ b/app/assets/stylesheets/charts.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the posts controller here.
+// Place all the styles related to the Image controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.data-fields .form-group {
+  margin-bottom: 0;
+}
