--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -13,7 +13,7 @@
       <% end %>
       <div class="well">
         <%= f.input(:title) %>
-        <%= f.input(:background_color, collection: [['White', :white], ['Red', :red], ['Pink', :pink]]) %>
+        <%= f.input(:background_color, input_html: { class: :minicolors } ) %>
         <%= f.input(:columns, collection: (1..100), prompt: true) %>
         <%= f.input(:grouplabels) %>
         <%= f.input(:item_height) %>
@@ -22,14 +22,14 @@
         <%= f.input(:width) %>
         <%= f.input(:height) %>
         <%= f.input(:style, collection: [
-            ['Circle', :circle],
-            ['Cross', :cross],
-            ['Manikin', :manikin],
-            ['Bar', :bar],
-            ['Pie', :pie]
+          ['Circle', :circle],
+          ['Cross', :cross],
+          ['Manikin', :manikin],
+          ['Bar', :bar],
+          ['Pie', :pie]
         ],
         prompt: true) %>
-        <%= f.submit class: 'btn btn-primary' %>
+      <%= f.submit class: 'btn btn-primary' %>
       </div>
     </div>
     <div class="col-sm-8 data-column">
