--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -8,7 +8,7 @@
     <div class="col-sm-4">
       <% if @chart.persisted? %>
         <div class="well">
-          <img src="<%= chart_path(@chart) %>" style="width: 100%;">
+          <%= link_to image_tag(chart_path(@chart), style: "width: 100%;"), chart_path(@chart) %>
         </div>
       <% end %>
       <div class="well">
