--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div class="alert alert-notice">
+  <div class="alert alert-danger">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
       <strong>The form contains <%= pluralize(object.errors.count, "error") %>.
       </strong>
