--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -9,6 +9,9 @@
       <% if @chart.persisted? %>
         <div class="well">
           <%= link_to image_tag(chart_path(@chart), style: "width: 100%;"), chart_path(@chart) %>
+          <div class="links">
+            <%= link_to 'Download', chart_download_path(@chart), class: 'btn btn-primary' %>
+          </div>
         </div>
       <% end %>
       <div class="well">
