change type of datum/value-field to string
to get the correct error-message

--- a/app/views/charts/_datum_fields.html.erb
+++ b/app/views/charts/_datum_fields.html.erb
@@ -1,6 +1,6 @@
 <tr class="nested-fields data-fields">
   <td>
-    <%= f.input :value, label: false %>
+    <%= f.input :value, label: false, as: :string %>
   </td>
   <td>
     <%= f.input :label, label: false %>
