--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -16,21 +16,21 @@
       <% end %>
       <div class="well">
         <%= f.input(:title) %>
-        <%= f.input(:background_color, input_html: { class: :minicolors } ) %>
+        <%= f.input(:background_color, input_html: { class: :minicolors, value: f.object.background_color || '#ffffff' } ) %>
         <%= f.input(:columns) %>
         <%= f.input(:item_height) %>
         <%= f.input(:item_width) %>
         <%= f.input(:width) %>
         <%= f.input(:height) %>
         <%= f.input(:grouplabels) %>
-        <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]]) %>
+        <%= f.input(:file_type, collection: [['PNG', :png], ['SVG', :svg]], include_blank: false) %>
         <%= f.input(:style, collection: [
           ['Circle', :circle],
           ['Cross', :cross],
           ['Manikin', :manikin],
           ['Bar', :bar],
-          ['Pie', :pie]
-        ]) %>
+          ['Pie', :pie]], include_blank: false
+        ) %>
       <%= f.submit class: 'btn btn-primary' %>
       </div>
     </div>
