--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Show</th>
       <th>Edit</th>
+      <th>Download</th>
       <th>Delete</th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= chart.title %></td>
         <td><%= link_to 'Show', chart %></td>
         <td><%= link_to 'Edit', edit_chart_path(chart) %></td>
+        <td><%= link_to 'Download', chart_download_path(chart) %></td>
         <td><%= link_to 'Destroy', chart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
